z-indexes fixed, layers moved around, logo back in place

--- a/index.css
+++ b/index.css
@@ -74,20 +74,30 @@ h1 {
   background: linear-gradient(90deg, rgba(138,107,255,1) 0%, rgba(203,97,209,1) 65%);
   width: 65%;
   border-radius: 0 15px 15px 0;
+  z-index: 0;
 }
 
 /* the branding on the notebook flap */
 
+.sidelogo-container {
+  height: 100%;
+  width: 100%;
+  display: flex;
+  position: absolute;
+  /* border: 1px solid yellow; */
+  z-index: 5;
+  justify-content: flex-end;
+  align-items: center;
+}
+
 .sidelogo {
-  /* border: 1px solid red; */
-  margin: auto;
   height: 35%;
-  padding-right: 20px;
   position: relative;
-  float: right;
-  top: 50%;
-  transform: translate(-50%, -50%);
-  z-index: 1;
+  right: 7%;
+  /* transform: translate(-50%, -50%); */
+  /* border: 1px solid red; */
+  /* float: right; */
+
 }
 
 /* the four ad label rows */
@@ -134,23 +144,50 @@ h1 {
   /* background: pink; */
 }
 
+/* clasp-lip and clasp-end form the binder handle */
+
 .clasp-lip {
   width: 5%;
   /* position: absolute; */
   /* background: blue; */
   /* height: 100%; */
-  border-right: 20vw solid rgb(138,107,255);;
+  border-right: 20vw solid rgb(138,107,255);
   border-bottom: 12vw solid transparent;
   border-top: 12vw solid transparent;
+  z-index: 4;
 }
 
 .clasp-end {
   width: 10%;
   /* border: 1px solid yellow; */
-  background: linear-gradient(270deg, rgb(81,65,143,1) 0%, rgb(138,107,255,1) 45%);
+  background: linear-gradient(270deg, rgba(81,65,143,1) 0%, rgba(138,107,255,1) 45%);
   border-top-right-radius: 12px;
   border-bottom-right-radius: 12px;
+  z-index: 4;
 }
+
+.clasp-lip-shadow-container {
+  width: 100%;
+  height: 100%;
+  /* border: 1px solid red; */
+  position: absolute;
+  display: flex;
+}
+
+.clasp-lip-shadow-empty1 {
+  /* border: 1px solid yellow; */
+  width: 58%;
+}
+
+.clasp-lip-shadow {
+  width: 38%;
+  /* border: 1px solid blue; */
+  border-right: 20vw solid rgba(81,65,143,1);
+  border-bottom: 12vw solid transparent;
+  border-top: 12vw solid transparent;
+}
+
+
 
 .shadow-container {
   position: absolute;
@@ -176,6 +213,7 @@ h1 {
 
 .shadow-col3 {
   width: 94%;
+  /* border: 1px solid red; */
 }
 
 .shadow-col4 {
@@ -190,13 +228,19 @@ h1 {
 .white-border-container {
   position: absolute;
   display: flex;
+  width: 100%;
+  height: 100%;
+  /* border: 1px solid orange; */
+  justify-content: center;
+  align-items: center;
+
 }
 
 .white-border {
-  border: 2px solid white;
+  position: relative;
+  border: 3px solid white;
   border-radius: 12px;
-  z-index: 5;
+  z-index: 1;
+  width: 93%;
   height: 95%;
-  width: 95%;
-  justify-content: center;
 }
